remove non-specific GC test item and include ZGC and Shenandoah
Signed-off-by: jonghoonpark <dev@jonghoonpark.com>